[package]
name = "echo-server"
version = "0.1.0"
authors = ["kaidiren <kaidiren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1.22"
features = "0.10.0"
bytes = "0.4.12"
futures = "0.1.28"
tokio-io = "0.1.12"
