[package]
name = "hello"
version = "0.1.0"
authors = ["kaidiren <kaidiren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3.24"
nickel = "0.11.0"
serde_json = "1.0.40"
serde = "1.0.99"
serde_derive = "1.0.99"
